--- a/src/app/shared/all-characters/all-characters.component.html
+++ b/src/app/shared/all-characters/all-characters.component.html
@@ -1,19 +1,26 @@
 
-<ion-content *ngIf="allCharacters">
-  <ion-list>
-    <ion-list-header>
-      Listado de personajes
-    </ion-list-header>
 
-    <ion-item *ngFor = "let character of allCharacters.results " (click) = "openModal(character)">
-      <ion-avatar slot="start">
-        <img [src]="character.image">
-      </ion-avatar>
-      <ion-label>
-        <h2>{{ character.name }}</h2>
-        <h3>Origen: {{ character.origin.name }}</h3>
-        <p>Tipo: {{ character.type}}</p>
-      </ion-label>
-    </ion-item>
-  </ion-list>
-</ion-content>
+  <ion-content *ngIf="allCharacters">
+    <ion-list>
+      <ion-list-header>
+        <div class="titulo">Listado de personajes</div>
+      </ion-list-header>
+      
+      <ion-item *ngFor = "let character of allCharacters.results " (click) = "openModal(character)">
+        <ion-avatar slot="start">
+          <img [src]="character.image">
+        </ion-avatar>
+        <ion-label>
+          <h2>{{ character.name }}</h2>
+          <h3>Origen: {{ character.origin.name }}</h3>
+          <p *ngIf="character.type">Tipo: {{ character.type}}</p>
+          <p *ngIf = "character.status == 'Dead'"><ion-icon name="skull-outline" color="danger"></ion-icon></p>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+  
+    <ion-button color="primary" *ngIf="prevPage != 0" (click) = "getPrevPage()"> {{ prevPage }} </ion-button>
+    <ion-button color="primary" disabled> {{ actPage }} </ion-button>
+    <ion-button color="primary" (click) = "getNextPage()"> {{ nexPage }} </ion-button>
+    <ion-label> Para un total de {{ allCharacters.info.pages }} páginas</ion-label>
+  </ion-content>
